[gd_scene load_steps=15 format=3 uid="uid://cd18r4n8uer70"]

[ext_resource type="Script" path="res://scripts/breakable_block.gd" id="1_pcp47"]
[ext_resource type="Texture2D" uid="uid://cemtlles5d4pj" path="res://assets/sprites/world_tileset.png" id="2_esdoy"]
[ext_resource type="AudioStream" uid="uid://fmeqd4efsjns" path="res://assets/sounds/block.wav" id="3_e2777"]
[ext_resource type="Texture2D" uid="uid://dp5gupysqn4wo" path="res://assets/sprites/explode_block.png" id="4_qva3v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n3ody"]
size = Vector2(12, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xvjts"]
size = Vector2(16, 13)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_3d152"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_3dep1"]
offsets = PackedFloat32Array(0.681529, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_giqoi"]
gradient = SubResource("Gradient_3dep1")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_v25bx"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(4, 4, 1)
direction = Vector3(0, -1, 0)
spread = 10.0
initial_velocity_min = 150.0
initial_velocity_max = 150.0
angular_velocity_min = -60.0
angular_velocity_max = 75.0
gravity = Vector3(0, 500, 0)
color_ramp = SubResource("GradientTexture1D_giqoi")
anim_offset_max = 0.0283

[sub_resource type="Animation" id="Animation_fbfol"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_81jn1"]
resource_name = "destroy"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GPUParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5bxbd"]
_data = {
"RESET": SubResource("Animation_fbfol"),
"destroy": SubResource("Animation_81jn1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i2qcl"]
size = Vector2(16, 4)

[node name="BreakableBlock" type="Area2D"]
collision_mask = 6
script = ExtResource("1_pcp47")

[node name="Trigger" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_n3ody")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_esdoy")
hframes = 16
vframes = 16
frame = 1

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_xvjts")

[node name="BlockSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_e2777")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_3d152")
emitting = false
amount = 4
process_material = SubResource("ParticleProcessMaterial_v25bx")
texture = ExtResource("4_qva3v")
one_shot = true
explosiveness = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5bxbd")
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 6

[node name="TriggerTop" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -18)
shape = SubResource("RectangleShape2D_i2qcl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
